--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,26 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col">
+           
+        </div>
+    </div>
+</div>
+{% endblock %}
+    <!-- Hero Images and Links -->
 {% block content %}
-    <h1 class="display-4 text-success">Hello, Customer</h1>
-
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a href="{% url 'home %}" class="nav-link main-logo-link"></a>
+            </div>
+            <div class="col-12 col-log-4 my-auto py-1 py-lg-0">
+                
+            </div>
+            <div class="col"></div>
+        </div>
+    </div>
 {% endblock %}
