--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,15 @@
     {% block corecss %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
+    <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -42,42 +45,47 @@
 
 <body>
     <header class="container-fluid fixed-top">
-        <div class="row">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img src="/media/logo.jpg" alt="Tibet Art Store Logo">
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+        
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 tesx">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link text-center text-lg-left">
+                    <img src="https://res.cloudinary.com/dript5k0k/image/upload/v1693344481/lH_4_ohw1ma.png" alt="Tibet Art Store Logo">
                 </a>
             </div>
-            <div class="col-12 col-lg-4 my-aut py-1 py-lg-0 ">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="">
-                    <div class="input-group w-70">
-                        <input type="text" class="form-control border border-black rounded-0" name="q" placeholder="Search our store">
-                        <div class="inpput-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                    <div class="input-group w-100">
+                        <input type="text" class="form-control border border-black" name="q" placeholder="Search our store">
+
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-dark" type="submit">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
                             </button>
+
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="col col-lg-4 my-aut py-1 py-lg-0">
+            
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" data-toggle="dropdown" aria-haspopup="true"
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">Account</p>
+                                <p class="my-0">My Account</p>
                             </div>
                         </a>
+
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                                <a href="" class="dropdown-item">Manage Products</a>
+                                <a href="" class="dropdown-item">Product Management</a>
                             {% endif %}
-                                <a href="" class="dropdown-item">User Profile</a>
+                                <a href="" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
@@ -86,12 +94,13 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
+                                    ${{ grand_total|floatformat:2 }}
                                     {% else %}
                                         $0.00
                                     {% endif %}
@@ -105,7 +114,7 @@
     </header>
 
     {% if messages %}
-    <div class="message-container"></div>
+        <div class="message-container"></div>
     {% endif %}
 
     {% block page_header %}
