--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,11 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
+        <div class="container-fluid new-products-banner">
+            <a class="logo-font my-1"href="">🎉 Check out our latest products in store! 🎉</a>
+        </div>
     </header>
+    
 
     {% if messages %}
         <div class="message-container"></div>
