Update menu styling for consistencies

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,7 +4,7 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">Home</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link mr-3 ml-3 dropdown-toggle" href="#" id="paintings-link" data-toggle="dropdown"
+            <a class="logo-font text-black nav-link mr-3 ml-3 dropdown-toggle" href="#" id="paintings-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Paintings
             </a>
@@ -16,7 +16,7 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link mr-3 ml-3 dropdown-toggle" href="#" id="ritual-items-link" data-toggle="dropdown"
+            <a class="logo-font text-black nav-link mr-3 ml-3 dropdown-toggle" href="#" id="ritual-items-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Ritual Items
             </a>
@@ -27,7 +27,7 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link mr-3 ml-3 dropdown-toggle" href="#" id="statues-link" data-toggle="dropdown"
+            <a class="logo-font text-black nav-link mr-3 ml-3 dropdown-toggle" href="#" id="statues-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Statues
             </a>
