--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div class="container text-center form-text">
-  <h2 class="linebreak logo-font mb-4">{% trans "Sign In" %}</h2>
+  <h2 class="linebreak logo-font mb-4 text-uppercase">{% trans "Sign In" %}</h2>
 
   {% get_providers as socialaccount_providers %}
 
@@ -43,7 +43,7 @@
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
        
-    <button class="btn btn-outline-dark w-25 mb-2" type="submit">{% trans "Sign In" %}</button>
+    <button class="btn btn-outline-dark w-25 mb-2 text-uppercase" type="submit">{% trans "Sign In" %}</button>
     <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </form>
 </div>
