--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,20 +5,20 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block head_title %}{% trans "Log Out" %}{% endblock %}
 
 {% block content %}
 <div class="container text-center form-text">
-  <h2 class="linebreak">{% trans "Sign Out" %}</h2>
+  <h2 class="linebreak logo-font mb-4  text-uppercase">{% trans "Log Out" %}</h2>
 
-  <p>{% trans 'Are you sure you want to sign out?' %}</p>
+  <p class="m-3">{% trans 'Are you sure you want to log out?' %}</p>
 
   <form class="form p-2" method="post" action="{% url 'account_logout' %}">
     {% csrf_token %}
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
     {% endif %}
-    <button class="btn btn-outline-dark w-25 mb-2" type="submit">{% trans 'Sign Out' %}</button>
+    <button class="btn btn-outline-dark w-25 mb-2  text-uppercase" type="submit">{% trans 'Log out' %}</button>
   </form>
 </div>
 
