--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="container text-center form-text">
-  <h2 class="linebreak logo-font mb-4">{% trans "Sign In" %}</h2>
+  <h2 class="linebreak logo-font mb-4  text-uppercase">{% trans "Sign up" %}</h2>
 
   <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
@@ -18,7 +18,7 @@
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
-    <button class="btn btn-outline-dark w-25 mb-2" type="submit">{% trans "Sign Up" %} &raquo;</button>
+    <button class="btn btn-outline-dark w-25 mb-2  text-uppercase" type="submit">{% trans "Sign Up" %}</button>
   </form>
 </div>
 {% endblock %}
