--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,11 +3,13 @@ html {
     height: 100%;
 }
 body {
-    background: url('/media/jambhala-mh-2882_002.png') no-repeat center center fixed;
-    background-size: cover;
-    height: calc(100vh + 100px);
-    color: white;
+    /*background: url('/media/jambhala-mh-2882_002.png') no-repeat center center fixed;*/
+    background-color: whitesmoke;
+    height: 100vh;
     font-family: Lato;
+}
+.main-logo-link img {
+    height: 110px;
 }
 /*
 .main-logo-link img {
@@ -34,9 +36,23 @@ body {
 }
 
 .linebreak {
-    border-bottom: 1px solid rgb(177, 166, 179);
-    box-shadow: 1px 1px 5px 0 #d4c1c361;
+    border-bottom: 1px solid rgba(80, 57, 12, 0.579);
+    /*box-shadow: 1px 1px 5px 0 #d4c1c361;*/
 }
+
+.custom-carousel {
+    height: 50vh;
+    overflow: hidden;
+    object-fit: contain;
+}
+
+.custom-carousel-img {
+    max-height: 100%; 
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /*--- Info banner--- */
 
 .new-products-banner {
@@ -59,8 +75,7 @@ body {
 
 /*--- Search Bar--- */
 input.form-control {
-    background-color: rgba(242, 238, 238, 0.619);
-    color: white;
+    background-color: rgba(166, 165, 166, 0);
 
 }
 
@@ -94,6 +109,7 @@ button,
     color: antiquewhite;
     border: none;
     transition: all 0.3s ease-in-out;
+  
     
 }
 
