--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="">
+                <form method="GET" action="/search/">
                     <div class="input-group w-100">
                         <input type="text" class="form-control border border-black" name="q" placeholder="Search our store">
 
@@ -83,7 +83,7 @@
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                                <a href="" class="dropdown-item">Product Management</a>
+                                <a href="{% url 'product_management' %}" class="dropdown-item">Product Management</a>
                             {% endif %}
                                 <a href="" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
@@ -121,13 +121,15 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-        <div class="container-fluid new-products-banner">
-            <a class="logo-font my-1"href="">🎉 If you need customised articles, contact us 🎉</a>
+       
+        <div class="row text-center">
+            <div class="delivery-banner col">
+                <h4 class="logo-font text-white my-1"> Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
+            </div>
         </div>
     </header>
     <main>
-    
-
+  
         {% if messages %}
             <div class="message-container"></div>
         {% endif %}
