--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,14 +3,7 @@
     
     <!-- Our Collections Dropdown -->
     <li class="nav-item dropdown">
-      <a class="logo-font nav-link text-black mr-3 dropdown-toggle" href="#" id="products-list-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Our Collections
-      </a>
-      <div class="dropdown-menu border-0" aria-labelledby="products-list-link">
-        <a href="?sort=price&direction=asc" class="dropdown-item">By Category</a>
-        <a href="?sort=category&direction=asc" class="dropdown-item">By Price</a>
-        <a href="" class="dropdown-item">All Products</a>
-      </div>
+      <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products_list' %}" id="home-link">All Products</a>
     </li>
     
     <!-- Paintings Dropdown -->
@@ -19,10 +12,9 @@
         Paintings
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="paintings-link">
-        <a href="?category=thangka" class="dropdown-item">Thangka</a>
-        <a href="?category=mandala" class="dropdown-item">Mandala</a>
-        <a href="?category=deities" class="dropdown-item">Deities</a>
-        <a href="?category=contemporary" class="dropdown-item">Contemporary</a>
+        <a href="{% url 'thanka_paintings_list' %}" class="dropdown-item">Thangka</a>
+        <a href="{% url 'mandala_list' %}" class="dropdown-item">Mandala</a>
+        <a href="{% url 'gods_goddesses_list' %}" class="dropdown-item">Gods and Goddesses</a>
       </div>
     </li>
     
@@ -32,22 +24,12 @@
         Ritual Items
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="ritual-items-link">
-        <a href="?category=singing_bowl" class="dropdown-item">Singing Bowl</a>
-        <a href="?category=crafts" class="dropdown-item">Crafts</a>
-        <a href="?category=accessories" class="dropdown-item">Accessories</a>
+        <a href="{% url 'singing_bowls_list' %}" class="dropdown-item">Singing Bowl</a>
+        <a href="{% url 'crafts_list' %}" class="dropdown-item">Crafts</a>
+        <a href="{% url 'specials_list' %}" class="dropdown-item">Specials</a>
       </div>
     </li>
     
-    <!-- Statues Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="logo-font text-black nav-link mr-3 ml-3 dropdown-toggle" href="#" id="statues-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Statues
-      </a>
-      <div class="dropdown-menu border-0" aria-labelledby="statues-link">
-        <a href="?category=bronze" class="dropdown-item">Bronze Statues</a>
-        <a href="?category=gold" class="dropdown-item">Golden Statues</a>
-      </div>
-    </li>
     
     <!-- Contact Us -->
     <li class="nav-item">
