--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,13 +3,45 @@ html {
     height: 100%;
 }
 body {
-    /*background: url('/media/jambhala-mh-2882_002.png') no-repeat center center fixed;*/
-    background-color: whitesmoke;
-    height: 100vh;
-    font-family: Lato;
+    background: url('/media/small/GT-CB-8_5-4.jpg');
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+    background-position: top 25% right 0;
+
+    /* background-color: whitesmoke;
+    color: #555;
+    font-family: lato;
+ */
+   /*  background: url('/media/small/GT-CB-8_5-4.jpg') no-repeat center center fixed;
+    /* background: url(/media/full/GT-CB-8_5-3.jpg)no-repeat center center fixed; */
+    /* background-color: whitesmoke;
+    background-size: auto;
+    height: calc(100vh-164px);
+    font-family: Lato; */
+} 
+.header-container {
+    z-index: 10;
+    position: relative;
 }
+.main-container {
+    height: calc(100vh-164px);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
 .main-logo-link img {
     height: 110px;
+}
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
 }
 /*
 .main-logo-link img {
@@ -19,6 +51,32 @@ body {
 .text-black {
     color: #000 !important;
 }
+
+.centered-image {
+    display: block;
+    margin: auto;
+    max-width: 100%;
+    height: auto;
+}
+
+.card-padding {
+    padding: 0 10px;
+}
+
+.column-padding {
+    padding: 10px;
+}
+
+.center-text {
+    text-align: center;
+}
+
+.center-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /*--- Forms--- */
 
 .form {
@@ -40,37 +98,13 @@ body {
     /*box-shadow: 1px 1px 5px 0 #d4c1c361;*/
 }
 
-.custom-carousel {
-    height: 50vh;
-    overflow: hidden;
-    object-fit: contain;
-}
-
-.custom-carousel-img {
-    max-height: 100%; 
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 /*--- Info banner--- */
 
-.new-products-banner {
-    background-color: #9b770d;
+.delivery-banner {
+    background-color: #b4963c;
     padding: 10px 0;
     text-align: center;
     font-weight: bold;
-}
-
-.new-products-banner a {
-    color: black;
-
-    text-decoration: none;
-    transition: color 0.2s ease-in-out;
-}
-
-.new-products-banner a:hover {
-    color: white
 }
 
 /*--- Search Bar--- */
