--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} 
 {% load static %} 
+{% load cart_tools %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -24,18 +25,78 @@
 
     <div class="row">
         <div class="col">
-            {% if bag_items %}
-                <div class="table-responsive rounded"></div>
+            {% if cart_items %}
+                <div class="table-responsive rounded shadow p-3 mb-5 bg-white rounded">
+                    <table class="table table-hover">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Product Info</th>
+                                <th scope="col">Details</th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Qty</th>
+                                <th scope="col">Subtotal</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in cart_items %}
+                                <tr>
+                                    <td class="p-3">
+                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}" style="max-width: 100px;">
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0 font-weight-bold">{{ item.product.name }}</p>
+                                        <p class="my-0 text-secondary">SKU: {{ item.product.sku|upper }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.product.price }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">{{ item.quantity }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        <p class="my-0">${{ item.product.price|multiply:item.quantity }}</p>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="5" class="pt-5 text-right">
+                                    <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
+                                    <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
+                                    <h4 class="mt-4 text-success"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                                    {% if free_delivery_delta > 0 %}
+                                        <p class="mb-1 text-warning">
+                                            Spend <strong>${{ free_delivery_delta }}</strong> more to avail free delivery!
+                                        </p>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <a href="{% url 'products' %}" class="btn btn-outline-primary rounded btn-lg">
+                                        <i class="fas fa-chevron-left mr-2"></i>
+                                        Keep Shopping
+                                    </a>
+                                    <a href="" class="btn btn-primary rounded btn-lg">
+                                        Secure Checkout
+                                        <i class="fas fa-lock ml-2"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
             {% else %}
-                <p class="lead mb-4">Your cart is empty.</p>
-                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                    <span class="icon">
+                <div class="alert alert-info" role="alert">
+                    Your cart is empty. 
+                    <a href="{% url 'products' %}" class="btn btn-outline-primary rounded-0 btn-lg ml-3">
                         <i class="fas fa-chevron-left"></i>
-                    </span>
-                    <span class="text-uppercase">Keep Shopping</span>
-                </a>
+                        Keep Shopping
+                    </a>
+                </div>
             {% endif %}
         </div>
     </div>
-</div>
+    
 {% endblock %}
