--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,25 +2,28 @@
 {% load static %} 
 {% block page_header %}
 <div class="container header-container">
-  <div class="row">
-    <div class="col"></div>
-  </div>
+    <div class="row">
+        <div class="col">
+
+        </div>
+    </div>
 </div>
 {% endblock %}
-
 {% block content %}
-    <div class="container d-flex flex-column justify-content-center align-items-center mt-5" style="min-height: 100vh;">
-        <div class="row text-center">
-            <div class="col-12">
-                <h1 class="display-4 logo-font">
-                    Mystic Arts and Crafts from Tibet
-                </h1>
-                <div class="my-5">
-                    <h4>
-                        <a href="" class="shop-now-button btn btn-lg text-uppercase py-3">Shop Now</a>
-                    </h4>
-                </div>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-7 col-md-6 my-auto">
+                    <h1 class="display-4 text-black">
+                        Mystic arts and crafts from the Himalayas!
+                    </h1>
+                    <div class="my-5">
+                        <h4>
+                            <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py3">Shop
+                                Now</a>
+                        </h4>
+                    </div>
             </div>
         </div>
     </div>
 {% endblock %}
+
