--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,43 +11,60 @@
 {% endblock %}
 
 {% block content %}
-<div class="filter-products"></div>
+
 <div class="overlay"></div>
+<div class="container mt-5">
+    <img src="{{ MEDIA_URL }}full/{{ product_image_name }}" alt="Product Image" width="500px">
 
-<img src="{{ MEDIA_URL }}full/{{ product_image_name }}" alt="Product Image" width="500px">
-
-<div>
-    <h2 class="mb-0">{{ product.title }}</h2>
-    <h3 class="lead mb-0 text-left font-weight-bold">Price: USD$ {{ product.price }}</h3>
-    <h4 class="lead mb-0 text-left font-weight-bold">SKU: {{ product.sku }}</h4>
-    <p>{{ product.description }}</p>
-    <p>{{ product.liquid }}</p>
-    <form class="product-form" action="{% url 'add_to_cart' product.id %}" method="POST">
-        {% csrf_token %}
+    <div>
+        <h2 class="mb-0">{{ product.title }}</h2>
+        <h3 class="lead mb-0 font-weight-bold">Price: USD$ {{ product.price }}</h3>
+        <h4 class="lead mb-0 text-left font-weight-bold">SKU: {{ product.sku }}</h4>
+        <p>{{ product.description }}</p>
+        <p>{{ product.liquid }}</p>
+        <form class="product-form" action="{% url 'add_to_cart' product.id %}" method="POST">
+            {% csrf_token %}
         <div class="product-form-row">
             <div class="col-full">
-                <label for="quantity-input-{{ product.id }}" class="mt-3 label-strong">Quantity:</label>
-                <div class="form-group quantity-group">
-                    <input class="quantity-input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="quantity-input-{{ product.id }}">
+                <label for="id_qty_{{ product.id }}" class="mt-3 label-strong">Quantity:</label>
+                    <div class="text-center">
+                        <div class="form-group w-50">
+                            <div class="input-group-selector rounded">
+                                <select class="form-control custom-select" name="quantity">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                    <option>6</option>
+                                    <option>7</option>
+                                    <option>8</option>
+                                    <option>9</option>
+                                    <option>10</option>
+                                </select>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                
+                    </div>
                 </div>
             </div>
-    
-            <div class="col-full">
-                <a href="{% url 'products' %}" class="btn btn-lg rounded-0 mt-5">
-                    <span class="icon">
-                        <i class="fas fa-arrow-left"></i>
-                    </span>
-                    <span class="text">Continue Shopping</span>
-                </a>
-                <button type="submit" class="btn btn-lg rounded-0 text mt-5">Add to Bag</button>
+        
+                <div class="col-full w-50 mx-auto">
+                    <a href="{% url 'products' %}" class="btn btn-lg rounded mt-5">
+                        <span class="icon">
+                            <i class="fas fa-arrow-left"></i>
+                        </span>
+                        <span class="text">Continue Shopping</span>
+                    </a>
+                    <button type="submit" class="btn btn-lg rounded-0 text mt-5">Add to Cart</button>
+                </div>
+                <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </div>
-            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-        </div>
-    </form>
-    
-    
-    
-    
-    
+        </form>
+            
+    </div>
 </div>
+
 {% endblock %}
