--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -152,3 +152,29 @@ button:hover,
     background-color: rgb(81, 79, 79);
     color: white;
 }
+.table-bg {
+    background-color: #f1e5c0;
+}
+.product-form {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+   
+    border-radius: 10px;
+}
+
+.product-form-row {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.col-full {
+    display: flex;
+    flex-direction: column;
+}
+.label-strong {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+
