--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,7 +22,6 @@
             <hr>
         </div>
     </div>
-
     <div class="row">
         <div class="col">
             {% if cart_items %}
@@ -51,9 +50,19 @@
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
+                                    
                                     <td class="py-3">
-                                        <p class="my-0">{{ item.quantity }}</p>
-                                    </td>
+                                        <form class="form update-form" method="POST" action="">
+                                            {% csrf_token %}
+                                            <div class="form-group">
+                                                <input class="form-control form-control-sm qty_input" type="number"
+                                                    name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                    data-item_id="{{ item.item_id }}"
+                                                    id="id_qty_{{ item.item_id }}">
+
+                                            </div>
+                                        </form>
+                                    </td> 
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price|multiply:item.quantity }}</p>
                                     </td>
@@ -99,5 +108,9 @@
             {% endif %}
         </div>
     </div>
-    
+    {% block postloadjs %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input_script.html' %}
+    {% endblock %}
+
 {% endblock %}
