Add About us app with view, url and  template

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,7 +3,7 @@
     
     <!-- Our Collections Dropdown -->
     <li class="nav-item dropdown">
-      <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products_list' %}" id="home-link">All Products</a>
+      <a class="logo-font nav-link text-black mr-3" href="{% url 'products_list' %}" id="home-link">All Products</a>
     </li>
     
     <!-- Paintings Dropdown -->
@@ -30,10 +30,13 @@
       </div>
     </li>
     
+    <li class="nav-item dropdown">
+      <a class="logo-font nav-link text-black mr-3" href="" id="home-link">Blog Post</a>
+    </li>
     
     <!-- Contact Us -->
     <li class="nav-item">
-      <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="home-link">About Us</a>
+      <a class="logo-font nav-link text-black mr-3" href="{% url 'about_us' %}" id="home-link">About Us</a>
     </li>
     
   </ul>
