--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,17 +8,6 @@ body {
     width: 100%;
     background-size: cover;
     background-position: top 25% right 0;
-
-    /* background-color: whitesmoke;
-    color: #555;
-    font-family: lato;
- */
-   /*  background: url('/media/small/GT-CB-8_5-4.jpg') no-repeat center center fixed;
-    /* background: url(/media/full/GT-CB-8_5-3.jpg)no-repeat center center fixed; */
-    /* background-color: whitesmoke;
-    background-size: auto;
-    height: calc(100vh-164px);
-    font-family: Lato; */
 } 
 .header-container {
     z-index: 10;
@@ -143,8 +132,10 @@ button,
     color: antiquewhite;
     border: none;
     transition: all 0.3s ease-in-out;
-  
-    
+}
+.update-link,
+.remove-item {
+    cursor: pointer;
 }
 
 button:hover,
@@ -152,6 +143,53 @@ button:hover,
     background-color: rgb(81, 79, 79);
     color: white;
 }
+
+/* .message-container {
+    position: fixed;
+    top: 72px;
+    right:15px;
+    z-index: 99999999
+}
+.custom-toast {
+    overflow: visible
+}
+.toast-capper {
+    height: 2px;
+}
+ */
+
+ .message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999;
+    transition: transform 0.3s ease-in-out;
+}
+
+.custom-toast {
+    overflow: visible;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.toast-capper {
+    height: 10px;
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.slide-in {
+    animation: slideIn 0.5s forwards;
+}
+
 .table-bg {
     background-color: #f1e5c0;
 }
