--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 {% load static %} 
 {% load cart_tools %}
-
+{% block extra_title %} Cart {% endblock %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -77,7 +77,7 @@
                                 <td colspan="5" class="pt-5 text-right">
                                     <h6><strong>Cart Total: ${{ total|floatformat:2 }}</strong></h6>
                                     <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
-                                    <h4 class="mt-4 text-success"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                                    <h4 class="mt-4 text-black"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
                                     {% if free_delivery_delta > 0 %}
                                         <p class="mb-1 text-warning">
                                             Spend <strong>${{ free_delivery_delta }}</strong> more to avail free delivery!
