--- a/products/templates/products/delete_product_confirm.html
+++ b/products/templates/products/delete_product_confirm.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
+<!-- <div class="overlay"></div> -->
     <div class="container p-3">
         <div class="row">
             <div class="col-12 text-center">
