--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_title %} - Products {% endblock %}
+{% block extra_title %}Products{% endblock %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -11,7 +11,6 @@
 {% endblock %}
 
 {% block content %}
-
 <div class="overlay"></div>
 <div class="container mt-5">
     <img src="{{ MEDIA_URL }}full/{{ product_image_name }}" alt="Product Image" width="500px">
@@ -35,7 +34,7 @@
                         </span>
                         <span class="text">Continue Shopping</span>
                     </a>
-                    <button type="submit" class="btn btn-lg rounded-0 text mt-5">Add to Cart</button>
+                    <button type="submit" class="btn btn-lg rounded text mt-5">Add to Cart</button>
                 </div>
                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
             </div>
