--- a/products/templates/products/product_management.html
+++ b/products/templates/products/product_management.html
@@ -31,7 +31,7 @@
         </div>
     </div> -->
 
-    <div class="overlay"></div>
+    <!-- <div class="overlay"></div> -->
 <div class="container p-3">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
