--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -2,58 +2,67 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_title %} - Products {% endblock %}
+{% block extra_title %}Products{% endblock %}
+<!-- <div class="container header-container">
+    <div class="row header-text ">
+        <div class="linebreak col-12 text-center text-uppercase logo-font my-3">Our Products</div>
+    </div>
+</div> -->
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col"></div>
+        <div class="col-12 text-center text-uppercase logo-font my-3">
+            <div class="header-text">Our Products</div>
+        </div>
     </div>
 </div>
 {% endblock %}
 <div></div>
 {% block content %}
-<div class="filter-products"></div>
+<!-- <div class="filter-products"></div> -->
 <div class="overlay"></div>
 <!-- sorting functionality -->
-<form method="get" action="{% url 'products' %}">
-    <div class="row justify-content-center mt-2 ml-4 mx-1">
-        <div class="col-12 col-md-3 col-lg-3 py-1 ">
-            <div class="sort-select-wrapper">
-                <select name="category" class="custom-select-md p-1 custom-select-sm rounded-2">
-                    <option value="all" {% if category == 'all' %}selected{% endif %}>All Categories</option>
-                    <option value="6" {% if category == '6' %}selected{% endif %}>Thangka Painting</option>
-                    <option value="3" {% if category == '3' %}selected{% endif %}>Mandalas</option>
-                    <option value="2" {% if category == '2' %}selected{% endif %}>Gods and Goddesses</option>
-                    <option value="4" {% if category == '4' %}selected{% endif %}>Singing Bowls</option>
-                    <option value="1" {% if category == '1' %}selected{% endif %}>Crafts</option>
-                    <option value="5" {% if category == '5' %}selected{% endif %}>Specials</option>
-                </select>
+<div class="container">
+    <form method="get" action="{% url 'products' %}">
+        <div class="row justify-content-center my-2 mx-1">
+            <div class="col-12 col-md-3 col-lg-3 py-1 pr-1">
+                <div class="sort-select-wrapper">
+                    <select name="category" class="custom-select-md p-0 custom-select-sm rounded-2 w-100">
+                        <option value="all" {% if category == 'all' %}selected{% endif %}>All Categories</option>
+                        <option value="6" {% if category == '6' %}selected{% endif %}>Thangka Painting</option>
+                        <option value="3" {% if category == '3' %}selected{% endif %}>Mandalas</option>
+                        <option value="2" {% if category == '2' %}selected{% endif %}>Gods and Goddesses</option>
+                        <option value="4" {% if category == '4' %}selected{% endif %}>Singing Bowls</option>
+                        <option value="1" {% if category == '1' %}selected{% endif %}>Crafts</option>
+                        <option value="5" {% if category == '5' %}selected{% endif %}>Specials</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-12 col-md-3 col-lg-3 py-1 px-1">
+                <div class="sort-select-wrapper">
+                    <select name="sorting" class="custom-select-md p-0 custom-select-sm rounded-2 w-100">
+                        <option value="" disabled selected>Sort by</option>
+                        <option value="name_asc" {% if sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                        <option value="name_desc" {% if sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                        <option value="price_asc" {% if sorting == 'price_asc' %}selected{% endif %}>Price low-high</option>
+                        <option value="price_desc" {% if sorting == 'price_desc' %}selected{% endif %}>Price high-low</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-12 col-md-1 col-lg-1 d-flex align-items-center justify-content-center py-1 pl-1">
+                <button class="btn btn-sm rounded" type="submit">Filter</button>
             </div>
         </div>
-        <div class="col-12 col-md-3 col-lg-3 py-1 mx-1">
-            <div class="sort-select-wrapper">
-                <select name="sorting" class="custom-select-md p-1 custom-select-sm rounded-2">
-                    <option value="name_asc" {% if sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-                    <option value="name_desc" {% if sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-                    <option value="price_asc" {% if sorting == 'price_asc' %}selected{% endif %}>Price low-high</option>
-                    <option value="price_desc" {% if sorting == 'price_desc' %}selected{% endif %}>Price high-low</option>
-                </select>
-            </div>
-        </div>
-        <div class="col-12 col-md-1 col-lg-1 d-flex align-items-center justify-content-center py-1 mx-1">
-            <button class="btn btn-lg rounded" type="submit">Filter</button>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
 
-
-    <div class="row justify-content-center">
+    <div class="row mx-3">
         {% for entry in products %}
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 column-padding">
-            <div class="card h-100 border-0 card-padding">
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
+            <div class="card h-100 border-0">
                 <a href="{% url 'product_detail' entry.product.id %}">
                     <img src="{{ MEDIA_URL }}small/{{ entry.image_name }}" 
-                        alt="Product Image" 
+                        alt="Product Image" width="300px"
                         
                         class="centered-image" 
                         onerror="this.onerror=null; this.src='{{ MEDIA_URL }}noimage.png';">
@@ -115,7 +124,7 @@
     </div>
     </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
+    <div class="btt-button shadow-sm rounded border border-black">
     <a class="btt-link d-flex h-100">
     <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
     </a>
