Correct styling issues

--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -24,7 +24,7 @@
 <!-- sorting functionality -->
 <div class="container">
     <form method="get" action="{% url 'products' %}">
-        <div class="row justify-content-center my-2 mx-1">
+        <div class="row justify-content-left my-2 mx-1 mb-3">
             <div class="col-12 col-md-3 col-lg-3 py-1 pr-1">
                 <div class="sort-select-wrapper">
                     <select name="category" class="custom-select-md p-0 custom-select-sm rounded-2 w-100">
