Add footer content and style

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,11 +4,17 @@ html {
 }
 body {
     background: url('/media/small/GT-CB-8_5-4.jpg');
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: top 25% right 0;
+    display: flex;
+    flex-direction: column;
+    
 } 
+main {
+    flex-grow: 1;
+}
 .header-container {
     z-index: 10;
     position: relative;
@@ -23,14 +29,14 @@ body {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: -5px; /* Adjust as necessary to position under the text */
+    bottom: -5px;
     height: 1px;
     background-color: rgba(80, 57, 12, 0.579);
     box-shadow: 1px 1px 5px 0 #d4c1c361;
 }
 
 .main-container {
-    height: calc(100vh-164px);
+    height: calc(100vh - 164px);
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -79,6 +85,20 @@ body {
     align-items: center;
 }
 
+/*----Footers----*/
+
+.social-icon {
+    width: 25px;
+    height: auto;
+    margin: 5px 5px 20px;
+}
+.social-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin-top: 25px;
+}
 /*--- Forms--- */
 
 .form {
@@ -283,7 +303,6 @@ button:hover,
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    /* background-color: #343a40; */
     color: #ffffff;
     border: none;
 }
