--- a/products/templates/products/search_results.html
+++ b/products/templates/products/search_results.html
@@ -1,18 +1,19 @@
 
 {% extends 'base.html' %}
 {% load static %}
-
-{% block extra_title %} - Products {% endblock %}
+{% block extra_title %}Products{% endblock %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col"></div>
+        <div class="col-12 text-center text-uppercase logo-font pb-2 my-5">
+            <div class="header-text">Search Result:</div>
+        </div>
     </div>
 </div>
 {% endblock %}
 <div></div>
 {% block content %}
-<div class="filter-products"></div>
+<!-- <div class="filter-products"></div> -->
 <div class="overlay"></div>
 <!-- sorting functionality -->
     <div class="row">
@@ -76,13 +77,5 @@
         {% endif %}
         {% endfor %}
     </div>
-    </div>
-    </div>
-    </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
-    <a class="btt-link d-flex h-100">
-    <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-    </a>
-    </div>
-
+  
 {% endblock %}
